--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,8 +29,8 @@ h1 h2 h3 {
 p {
     margin: 0;
 }
-
-header {
+/*style elements related to the header and nav bar*/
+ header {
     padding: 15px 6% 15px 0;
     display: flex;
     flex-direction: row;
@@ -40,3 +40,36 @@ header {
     background-color: var(--third);
     box-shadow: 0 5px 35px rgba(114, 162, 163, 0.4);
   }
+
+  header h1 {
+    color: var(--third);
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    width: 450px;
+    background-color: var(--second);
+    padding: 5px 1% 5px 6%;
+    margin: 0;
+}
+
+nav {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+nav a {
+    text-decoration: none;
+    padding: 5px 10px;
+    margin-right: 10px;
+    color: var(--second);
+    background-image: linear-gradient(270deg, var(--second) 0%, var(--second) 100%);
+    background-repeat: no-repeat;
+    background-size: 100% 0.2em;
+    background-position: bottom;
+    transition: all 0.25s ease-in;
+    font-size: 1.4rem;
+}
+
+nav a:hover {
+    background-size: 100% 100%;
+    color: var(--primary);
+}
