--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,7 +29,7 @@ h1 h2 h3 {
 p {
     margin: 0;
 }
-/*style elements related to the header and nav bar*/
+/*style elements related to the header*/
  header {
     padding: 15px 6% 15px 0;
     display: flex;
@@ -50,6 +50,7 @@ p {
     margin: 0;
 }
 
+/* style elements related to the nav semantic element */
 nav {
     display: flex;
     flex-direction: row;
@@ -73,3 +74,8 @@ nav a:hover {
     background-size: 100% 100%;
     color: var(--primary);
 }
+/* background color changes when hovered */
+nav a:hover {
+    background-size: 100% 100%;
+    color: var(--primary);
+  }
