--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -75,7 +75,118 @@ nav a:hover {
     color: var(--primary);
 }
 /* background color changes when hovered */
+
 nav a:hover {
     background-size: 100% 100%;
     color: var(--primary);
   }
+  
+main {
+    margin-top: 20px;
+    margin-bottom: 45px;
+  }
+/* the following styles pertain to the hero-banner class element */
+  hero-banner {
+    background-image: url("/week-2/advanced-css-project/assets/images/digital-art-numbers-binary-cyberspace-wallpaper-preview.jpg"), linear-gradient(180deg,var(--second)0%, var(--first)100%);
+    background-color: var(--first);
+    height: 285px;
+    position: relative;
+    background-position: center;
+    background-blend-mode: normal;
+    min-height: 30vh;
+    background-size: cover;
+    justify-content: flex-end;
+    align-items: flex-end;
+    text-align: right;
+}
+
+.hero-banner div {
+    flex: 0 0 50%;
+}
+
+.hero-banner img {
+    position: absolute;
+    right: 110px;
+    top: 20px;
+    height: 185px;
+    border-radius: 60px;
+}
+
+.hero-banner h2 {
+   color: var(--third);
+   margin:0;
+   padding: 5px 10px;
+   font-size: 2.3rem;
+   line-height: 1.3;
+   display: inline;
+   opacity: .75;
+   font-style: italic;
+}
+.work-section {
+    height: 53vw;
+    margin:0;
+    
+}
+.page-wrap {
+    max-width: 90%;
+    margin-left: auto;
+    margin-right: auto;
+}
+/* applies to the flex boxes in the middle of the page */
+.grids {
+    display:flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.flex-item {
+    border: 3px solid var(--second);
+    background-color: var(--first);
+    color: var(--third);
+    min-height: 350px;
+    max-height: 350px;
+    min-width: 620px;
+    flex-basis: 5px;
+    display: flex;
+    align-items: flex-end;
+    padding: 0 0 20px 0;
+    margin: .5em ;
+    text-decoration: none;
+    background-blend-mode: soft-light;
+    background-size: 100%;
+    transition: all 0.3s;
+    font-size: 0.9rem;
+    opacity: .8;
+
+}
+
+
+.flex-item:hover {
+    opacity:1;
+}
+
+.about-me {
+    margin-bottom: 20px;
+    height: 5vw;
+}
+
+/* first flex box portfolio item */
+
+.flex-item:first-child {
+    min-height: 400px;
+    flex-basis: 80%;
+}
+
+.flex-item:hover {
+    background-color: 0 0 0 0.5;
+}
+
+
+.flex-item div {background-color: var(--second);
+                padding: 5px 5px;
+                opacity: .7;
+}
+
+.flex-item h3 {
+    font-size: 1.2rem;
+}
