--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,13 +5,11 @@
 }
 
  /* color shortcuts */
- :root {
-    --primary: rgba(68, 88, 119, 1);
-    --secondary: rgba(146, 204, 206, 1);
-    --tertiary: rgba(49, 52, 61, 1);
-    --dark: rgba(28, 29, 33, 1);
-    --light: rgba(238, 238, 247, 1);
-  }
+:root {
+    --first: rgba(68, 88, 119, 1);
+    --second: rgba(146, 204, 206, 1);
+    --third: rgba(49,52, 61, 1);
+}
 /* following adds style to the body */
 body {
     margin: 0;
@@ -90,7 +88,7 @@ main {
   }
 /* the following styles pertain to the hero-banner class element */
 .hero-banner {
-    background-image: url("./assets/images/digital-art-numbers-binary-cyberspace-wallpaper-preview.jpg"), linear-gradient(180deg,var(--second)0%, var(--first)100%); 
+    background-image: url("../images/digital-art-numbers-binary-cyberspace-wallpaper-preview.jpg"), linear-gradient(180deg,var(--second)0%, var(--first)100%); 
     height: 285px;
     position: relative;
     background-position: center;
@@ -217,29 +215,29 @@ h3 span {
 /*styles linking images to grid boxes */
 
 .refractor {
-    background-image: url("./assets/images/code-refractor.png");
+    background-image: url("../images/code-refractor.png");
     background-repeat: no-repeat;
 }
    
 .css {
     
-    background-image: url("./assets/images/css-cheatsheet.png");
+    background-image: url("../images/css-cheatsheet.png");
     background-repeat: no-repeat;
 }
  
 .password {
-    background-image: url("./assets/images/passwordgenerator.jpg");
+    background-image: url("../images/passwordgenerator.jpg");
     background-repeat: no-repeat;
 }
 
 .github {
     
-    background-image: url("./assets/images/github-homescreen.png");
+    background-image: url("../images/github-homescreen.png");
     background-repeat: no-repeat;
 }
 
 .google {
-    background-image: url("./assets/images/google.JPG");
+    background-image: url("../images/google.JPG");
     background-repeat: no-repeat;
     
 }
